# capPG

./: AgpAgent.parc  Arena.cpp  Arena.h  Arvore.cpp  Arvore.h  BgpAgent.parc  CMakeLists.txt  Configuracoes.cpp  Configuracoes.h  Configures.h  Gramatica.cpp  Gramatica.h  Grammar.cpp  Grammar.h  Individual.cpp  Individual.h  Individuo.cpp  Individuo.h  Instance.cpp  Instance.h  Instancia.cpp  Instancia.h  No.cpp  Node.cpp  Node.h  Output.cpp  Output.h  Parser.cpp  Parser.h  README.MD  Resultados  Saida.cpp  Saida.h  Search.cpp  Search.h  Subject.cpp  Tree.cpp  Tree.h  a.out  lit.sol  (+2 more)
2/: CMakeLists.txt  Configures.cpp  Grammar.cpp  Grammar.h  Instances.cpp  Instances.h  No.h  Resultados  Saida.cpp  Search.h  Subject.h  Tree.h  a.out  main.cpp
Docs/: 0.00447487.pl  Resultados  Resultados mexido  a fazer  grafs.ods  lit.sol
Generations/: README
Instances/: QAP_sko42_04_n  lit.sol
Instancias/: N25_03.txt  N25_04.txt  N30_01.txt  N30_02.txt  N30_03.txt  N30_04.txt  S10  lit.sol
Population/: gpAgent0.cpp  gpAgent1.cpp  gpAgent10.cpp  gpAgent13.cpp  gpAgent14.cpp  gpAgent15.cpp  gpAgent16.cpp  gpAgent17.cpp  gpAgent18.cpp  gpAgent19.cpp  gpAgent2.cpp  gpAgent20.cpp  gpAgent21.cpp  gpAgent22.cpp  gpAgent23.cpp  gpAgent24.cpp  gpAgent25.cpp  gpAgent26.cpp  gpAgent27.cpp  gpAgent28.cpp  gpAgent29.cpp  gpAgent3.cpp  gpAgent30.cpp  gpAgent31.cpp  gpAgent32.cpp  gpAgent33.cpp  gpAgent34.cpp  gpAgent35.cpp  gpAgent36.cpp  gpAgent37.cpp  gpAgent38.cpp  gpAgent39.cpp  gpAgent4.cpp  gpAgent40.cpp  gpAgent41.cpp  gpAgent42.cpp  gpAgent43.cpp  gpAgent44.cpp  gpAgent45.cpp  (+30 more)
(+156042 files in other folders)
