cmake_minimum_required(VERSION 3.21)
project(CapHH)

set(CMAKE_CXX_STANDARD 14)

add_executable(CapHH main.cpp Saida.cpp Saida.h Configuracoes.cpp Configuracoes.h Gramatica.cpp Gramatica.h Search.cpp Search.h Individuo.cpp Individuo.h Arvore.cpp Arvore.h No.cpp No.h Instancia.cpp Instancia.h Arena.cpp Arena.h)
